--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
          </div>
     </header>
     <main>
-        <div>
             <section class="teams-container">
                 <div class="team-img-containar">
                     <img src="images/team1.png" alt="">
@@ -43,7 +42,33 @@
             </section>
             <!-- features section -->
             <section class="features">
-
+                <div class="feature-content">
+                    <h3 class="section-title">Features you will <br>love & enjoy</h3>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                </div>
+                 <div class="feature-img">
+                    <img src="images/architect.png" alt="">
+                    <div class="ten-year-badge">
+                        <h2>10+ years</h2>
+                        <p>Experience</p>
+                    </div>
+                 </div>
             </section>
             <!-- facts section -->
             <section class="facts">
@@ -73,7 +98,18 @@
                     </div>
                 </div>
             </section>
-        </div>
+            <!-- sponsors section -->
+            <section class="sponsors">
+                <h3 class="sectio-title">Our Sponspors</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                <div class="sponsors-img-containar">
+                    <img src="images/sponsors/spotify.png" alt="">
+                    <img src="images/sponsors/amazon.png" alt="">
+                    <img src="images/sponsors/google.png" alt="">
+                    <img src="images/sponsors/telerama.png" alt="">
+                    <img src="images/sponsors/figma.png" alt="">
+                </div>
+            </section>
     </main>
     <footer>
 
